add --add-opens flags for Java 17