@@ -1497,6 +1497,8 @@
                         <!-- set default options -->
                         <argLine>
                             @{jacocoArgLine}
+                            <!-- for datasketches-memory access to DirectByteBuffer until Java 17 is supported -->
+                            --add-opens java.base/sun.nio.ch=ALL-UNNAMED
                             -Xmx1500m
                             -XX:MaxDirectMemorySize=512m
                             -Duser.language=en
@@ -1774,6 +1776,7 @@
                                 -Daws.region=us-east-1 <!-- required for s3-related unit tests -->
                                 <!--@TODO After fixing https://github.com/apache/druid/issues/4964 remove this parameter-->
                                 -Ddruid.indexing.doubleStorage=double
+                                --illegal-access=warn
                             </argLine>
                             <!-- our tests are very verbose, let's keep the volume down -->
                             <redirectTestOutputToFile>true</redirectTestOutputToFile>
